--- a/BackEnd/Lesson_06_2023_05_06/src/main/resources/templates/edit-user-form.html
+++ b/BackEnd/Lesson_06_2023_05_06/src/main/resources/templates/edit-user-form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<link th:href="@{/css/index.css}" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <title>Edit user</title>
