--- a/BackEnd/Lesson_06_2023_05_06/src/main/resources/templates/user-order.html
+++ b/BackEnd/Lesson_06_2023_05_06/src/main/resources/templates/user-order.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link th:href="@{/css/index.css}" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
