--- a/BackEnd/Lesson_06_2023_05_06/src/main/resources/templates/create-product-form.html
+++ b/BackEnd/Lesson_06_2023_05_06/src/main/resources/templates/create-product-form.html
@@ -26,7 +26,7 @@
     <input type="text"
            name="description"
            th:field="${product.description}"
-           placeholder="Введите цену" />
+           placeholder="Введите описание" />
 
     <button type="submit"> Add new product </button>
 
