--- a/BackEnd/Lesson_06_2023_05_06/src/main/resources/templates/products.html
+++ b/BackEnd/Lesson_06_2023_05_06/src/main/resources/templates/products.html
@@ -10,11 +10,11 @@
 <h1>products</h1>
 <table>
     <tbody>
-    <tr th:each="product: ${products}">
-        <th th:text="${product.id}"></th>
-        <td th:text="${product.title}"></td>
-        <td th:text="${product.price}"></td>
-        <td th:text="${product.description}"></td>
+    <tr th:each = "product: ${product}">
+        <th th:text = "${product.id}"></th>
+        <td th:text = "${product.title}"></td>
+        <td th:text = "${product.price}"></td>
+        <td th:text = "${product.description}"></td>
         <td>
             <form th:method="GET"
             th:action="@{/products/edit/{id}(id=${product.id})}">
